# vlm-hallucination-detector

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  PACKAGING.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: app.py
configs/: thresholds.yaml
docs/: architecture.md  evaluation.md
experiments/: baseline_clip.py  benchmark_table.py  evaluate_methods.py  evaluate_pope.py  evaluation.py  run_benchmark.py  train_logistic.py
experiments/results/: coco_eval_20260311_163721.json  coco_eval_20260311_165322.json  coco_eval_20260312_154448.json  coco_eval_20260312_154839.json  eval_20260312_160252.json  result_20260309_213447.json  result_20260309_221525.json  result_20260309_221827.json
frontend/: streamlit_app.py
models/: blip_model.py  clip_model.py  model_registry.py  siglip_model.py
tests/: conftest.py  test_attacks.py  test_classifier.py  test_classifier_features.py  test_config.py  test_metrics.py  test_similarity.py  test_train_logistic.py
utils/: caption_attack.py  classifier.py  config.py  datasets.py  llm_attack.py  logging_config.py  methods.py  metrics.py  plots.py  preprocessing.py  real_heatmap.py  similarity.py  visualization.py
